[package]
name = "vosk"
version = "0.1.0"
authors = ["Andrey Tkachenko <andreytkachenko64@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cblas = "0.2.0"
openblas-src = { version = "0.9.0", features = ["cache", "static"] }

[build-dependencies]
bindgen = "0.54.1"
cc = { version = "1.0.58", features = ["parallel"] }

[dev-dependencies]
audrey = "0.2.0"
