[package]
name = "vosk"
version = "0.1.0"
authors = ["Andrey Tkachenko <andreytkachenko64@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cblas = "0.2.0"
openblas-src = { version = "0.9.0", features = ["lapacke", "system"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[build-dependencies]
bindgen = "0.54"
cc = { version = "1.0", features = ["parallel"] }
flate2 = "1.0.17"
tar = "0.4.29"
curl = "0.4.33"
anyhow = "1.0.32"

[dev-dependencies]
audrey = "0.2"
